Bug fix: tipos do buffer gerador de sinais.

--- a/Gerador de buffer de sinais/Gerador de buffer de sinais.ipynb
+++ b/Gerador de buffer de sinais/Gerador de buffer de sinais.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "** **\n",
         "\n",
-        "Usabilidade: vá até a seção **Geração de buffer de sinal simulado** e altere os parâmetros desejados de frequências, amplitude e nome do buffer a ser gerado."
+        "Usabilidade: vá até a seção **Geração de buffer de sinal simulado** e altere os parâmetros desejados de frequências, amplitude e nome do buffer a ser gerado. Em caso de dúvidas, consulte [ESTE POST](https://programacaoeletronica.wordpress.com/2024/01/02/jupyter-notebook-gerador-de-buffer-de-senoides-em-c/) do blog."
       ]
     },
     {
@@ -138,13 +138,13 @@
         "        normalized_buffer = (buff / max_value)\n",
         "\n",
         "        # Converting to the specified data type and range\n",
-        "        if dtype == 'u8':\n",
+        "        if dtype == 'uint8_t':\n",
         "            normalized_buffer = np.interp(normalized_buffer, [-1, 1], [0, 255])\n",
         "            int_buffer = normalized_buffer.astype(np.uint8)\n",
-        "        elif dtype == 'u16':\n",
+        "        elif dtype == 'uint16_t':\n",
         "            normalized_buffer = np.interp(normalized_buffer, [-1, 1], [0, 65535])\n",
         "            int_buffer = normalized_buffer.astype(np.uint16)\n",
-        "        elif dtype == 'u32':\n",
+        "        elif dtype == 'uint32_t':\n",
         "            normalized_buffer = np.interp(normalized_buffer, [-1, 1], [0, 4294967295])\n",
         "            int_buffer = normalized_buffer.astype(np.uint32)\n",
         "        else:\n",
@@ -247,7 +247,7 @@
         "# Plot no tempo (amostras)\n",
         "plot_signal_time(t, signal)\n",
         "\n",
-        "save_buff_to_header(signal, \"simulated_signal\", dtype='u16')"
+        "save_buff_to_header(signal, \"simulated_signal\", dtype='uint16_t')"
       ]
     },
     {
