--- a/Gerador de buffer de sinais/Gerador de buffer de sinais.ipynb
+++ b/Gerador de buffer de sinais/Gerador de buffer de sinais.ipynb
@@ -148,7 +148,7 @@
         "            normalized_buffer = np.interp(normalized_buffer, [-1, 1], [0, 4294967295])\n",
         "            int_buffer = normalized_buffer.astype(np.uint32)\n",
         "        else:\n",
-        "            int_buffer = buff\n",
+        "            raise ValueError(\"Tipo de dados não suportado.\")\n",
         "    else:\n",
         "        int_buffer = buff\n",
         "\n",
