Update - link do curso.

--- a/Gerador de janelas/Gerador de janelas.ipynb
+++ b/Gerador de janelas/Gerador de janelas.ipynb
@@ -27,7 +27,8 @@
       "source": [
         "# Gerador de janelas 🪟\n",
         "\n",
-        "Material complementar da aula 14 do [curso de Processamento Digital de Sinais na Prática](https://programacaoeletronica.wordpress.com/cursos-online/): Implementando FFT num microcontrolador - pt 2!\n",
+        "Material complementar do curso de [Processamento Digital de Sinais: da amostragem à FFT](https://programacaoeletronica.wordpress.com/cursos-online/)!\n",
+        "\n",
         "\n",
         "** **\n",
         "\n",
